'fixed image wrapping"

--- a/css/main.css
+++ b/css/main.css
@@ -53,6 +53,7 @@ ul.posts li {
     list-style: none;
 }
 
-img {
+img.wrap {
     float: right
+    
 }
